kyverno/policies/pods/test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-pod-security-policies
spec:
  steps:
    - name: apply-policies
      try:
        - apply:
            file: ../AppArmor.yaml
        - apply:
            file: ../capabilities.yaml
        - apply:
            file: ../hostIPC.yaml
        - apply:
            file: ../hostNetwork.yaml
        - apply:
            file: ../hostPaths.yaml
        - apply:
            file: ../hostPID.yaml
        - apply:
            file: ../hostPorts.yaml
        - apply:
            file: ../pod-node-restriction.yaml
        - apply:
            file: ../privilege-escalation.yaml
        - apply:
            file: ../privileged.yaml
        - apply:
            file: ../procMount.yaml
        - apply:
            file: ../Seccomp.yaml
        - apply:
            file: ../SELinux.yaml
        - apply:
            file: ../sysctls.yaml
        - apply:
            file: ../user-namespaces.yaml

        - assert:
            timeout: 30s
            file: policy-ready.yaml

    - name: test-apparmor
      try:
        - apply:
            file: test-apparmor.yaml
            expect:
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-apparmor-unconfined
                check:
                  ($error != null): true
                  "(contains(to_string($error), 'Specifying other AppArmor profiles is disallowed'))": true

    - name: test-pod-capabilities
      try:
        - apply:
            timeout: 2m
            file: test-capabilities.yaml
            expect:
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-capabilities-forbidden
                check:
                  ($error != null): true
                  "(contains(to_string($error), 'Any capabilities added other than NET_BIND_SERVICE'))": true

        - assert:
            timeout: 30s
            resource:
              apiVersion: apps/v1
              kind: Deployment
              metadata:
                name: test-capabilities-exception-deployment-allowed
                namespace: default
              status:
                updatedReplicas: 1

    - name: test-host-ipc
      try:
        - apply:
            timeout: 2m
            file: test-hostIPC.yaml
            expect:
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-hostipc-set-to-true
                check:
                  ($error != null): true
                  "(contains(to_string($error), 'HostIPC pods are disallowed'))": true

        - assert:
            timeout: 30s
            resource:
              apiVersion: apps/v1
              kind: Deployment
              metadata:
                name: test-hostipc-set-to-true-exception-deployment-allow
                namespace: default
              status:
                updatedReplicas: 1

    - name: test-host-network
      try:
        - apply:
            timeout: 2m
            file: test-hostNetwork.yaml
            expect:
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-host-network-set-to-true
                check:
                  ($error != null): true
                  "(contains(to_string($error), 'HostNetwork pods are disallowed'))": true

        - assert:
            timeout: 30s
            resource:
              apiVersion: apps/v1
              kind: Deployment
              metadata:
                name: test-host-network-set-to-true-exception-deployment-allow
                namespace: default
              status:
                updatedReplicas: 1

    - name: test-hostpath-volumes
      try:
        - apply:
            timeout: 2m
            file: test-hostpath.yaml
            expect:
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-hostpath-forbidden
                check:
                  ($error != null): true
                  "(contains(to_string($error), 'HostPath volumes are not allowed.'))": true

        - assert:
            timeout: 30s
            resource:
              apiVersion: apps/v1
              kind: Deployment
              metadata:
                name: test-hostpath-exception-deployment-allow
                namespace: kube-system
              status:
                updatedReplicas: 1

    - name: test-host-pid-and-ports
      try:
        - apply:
            timeout: 2m
            file: test-host-pid-ports.yaml
            expect:
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-hostpid-true
                check:
                  ($error != null): true
                  "(contains(to_string($error), 'HostPID pods are disallowed'))": true
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-hostport-forbidden
                check:
                  ($error != null): true
                  "(contains(to_string($error), 'Use of host ports is disallowed'))": true

        - assert:
            timeout: 30s
            resource:
              apiVersion: apps/v1
              kind: Deployment
              metadata:
                name: test-hostport-exception-deployment-allow
                namespace: kube-system
              status:
                updatedReplicas: 1

    - name: test-node-scheduling
      try:
        - apply:
            file: test-scheduling.yaml
            expect:
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-scheduling-master-forbidden
                check:
                  ($error != null): true
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-scheduling-control-plane-forbidden
                check:
                  ($error != null): true

        - assert:
            timeout: 30s
            resource:
              apiVersion: apps/v1
              kind: DaemonSet
              metadata:
                name: test-scheduling-excluded-namespace-ds
                namespace: sys-mon
              status:
                updatedNumberScheduled: 1

    - name: test-privilege-combined
      try:
        - apply:
            timeout: 2m
            file: test-privilege-combined.yaml
            expect:
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-privilege-escalation-set-to-true
                check:
                  ($error != null): true
                  "(contains(to_string($error), 'Privilege escalation is disallowed'))": true
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-privileged-container-fail
                check:
                  ($error != null): true
                  "(contains(to_string($error), 'Privileged mode is disallowed'))": true

    - name: test-proc-mount
      try:
        - apply:
            file: test-procmount.yaml
            expect:
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-procmount-init-forbidden
                check:
                  ($error != null): true
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-procmount-unmasked
                check:
                  ($error != null): true

    - name: test-security-settings
      try:
        - apply:
            file: test-security-settings.yaml
            expect:
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-seccomp-init-forbidden
                check:
                  ($error != null): true
                  "(contains(to_string($error), 'Use of custom Seccomp profiles is disallowed'))": true
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-selinux-forbidden
                check:
                  ($error != null): true
                  # Note: This checks for either of the two SELinux rule error messages
                  "(contains(to_string($error), 'Setting the SELinux type is restricted') || contains($error, 'Setting the SELinux user or role is forbidden'))": true
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: test-sysctls-forbidden
                check:
                  ($error != null): true

    - name: test-user-namespaces
      try:
        - apply:
            timeout: 2m
            file: test-user-namespaces.yaml
        - assert:
            timeout: 30s
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: test-user-ns-plain-pod-non-sys-ns
              spec:
                (hostUsers != false): true
        - assert:
            timeout: 30s
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: test-user-ns-plain-pod
                namespace: sys-log
              spec:
                hostUsers: false
        - assert:
            timeout: 30s
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: test-user-ns-hostnetwork-pod
                namespace: sys-log
              spec: {}
        - assert:
            timeout: 30s
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: test-user-ns-hostpid-pod
                namespace: sys-log
              spec: {}
        - assert:
            timeout: 30s
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: test-user-ns-hostipc-pod
                namespace: sys-log
              spec: {}
        - assert:
            timeout: 30s
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: test-user-ns-hostpath-pod
                namespace: sys-log
              spec:
                volumes:
                  - name: ssl
                    hostPath:
                      path: /etc/kubernetes/ssl
                      type: Directory
        - assert:
            timeout: 30s
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: test-user-ns-emptydir-pod
                namespace: sys-log
              spec:
                hostUsers: false
                volumes:
                  - name: data
                    emptyDir: {}
        - assert:
            timeout: 30s
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: test-user-ns-nfs-pvc-pod
                namespace: sys-log
              spec:
                volumes:
                  - name: data
                    persistentVolumeClaim:
                      claimName: test-user-ns-nfs-pvc
        - assert:
            timeout: 30s
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: test-user-ns-standard-pvc-pod
                namespace: sys-log
              spec:
                hostUsers: false
                volumes:
                  - name: data
                    persistentVolumeClaim:
                      claimName: test-user-ns-standard-pvc
        - assert:
            timeout: 30s
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: test-user-ns-no-storageclass-pvc-pod
                namespace: sys-log
              spec:
                volumes:
                  - name: data
                    persistentVolumeClaim:
                      claimName: test-user-ns-no-storageclass-pvc
        - assert:
            timeout: 30s
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: test-user-ns-missing-pvc-pod
                namespace: sys-log
              spec:
                volumes:
                  - name: data
                    persistentVolumeClaim:
                      claimName: test-user-ns-missing-pvc
